--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 numpy==1.26.4
+opencv-python==4.9.0.80
 pillow==10.2.0
 scikit-image==0.22.0
 scipy==1.12.0
+torch==2.2.1
+torchvision==0.17.1
 tqdm==4.66.1
+yacs==0.1.8
